--- a/app/views/appeal/before-you-start/aad/v4/partial-success/check.html
+++ b/app/views/appeal/before-you-start/aad/v4/partial-success/check.html
@@ -13,9 +13,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <h1 class="govuk-heading-l">Confirm your application details</h1>
+      <h1 class="govuk-heading-l">Check your application details</h1>
 
-      <p class="govuk-body">We’ve combined the details you provided with information held in the local planning authority records.</p>
+      <p class="govuk-body">We’ve combined the details you provided with information held in the Local Planning Authority records.</p>
 
       <p class="govuk-body">Your deadline to appeal is 11:59pm on Sunday 15 March 2026.</p>
 
@@ -51,7 +51,24 @@
                 {
                   href: "application-ref",
                   text: "Change",
-                  visuallyHiddenText: "applciation number"
+                  visuallyHiddenText: "application number"
+                }
+              ]
+            }
+          },
+          {
+            key: {
+              text: "Site address"
+            },
+            value: {
+              text: "123 Street, London, AB1 2CD"
+            },
+            actions: {
+              items: [
+                {
+                  href: "#",
+                  text: "Change",
+                  visuallyHiddenText: "date of birth"
                 }
               ]
             }
