--- a/app/views/appeal/before-you-start/aad/v4/partial-success/loading.html
+++ b/app/views/appeal/before-you-start/aad/v4/partial-success/loading.html
@@ -19,7 +19,7 @@
       // Wait 2.5 seconds (2500ms)
       setTimeout(() => {
         // Redirect to check.html
-        window.location.href = "../../../v19/planning-type";
+        window.location.href = "granted-or-refused";
       }, 1000);
     });
   </script>
