--- a/app/views/appeal/enforcement/v3/before-you-start/cannot-appeal.html
+++ b/app/views/appeal/enforcement/v3/before-you-start/cannot-appeal.html
@@ -13,7 +13,7 @@
   </p>
 
   <p class="govuk-body">
-    Your deadline was 26 March 2025. You had 12 weeks from the date of the decision to appeal. This is 12 weeks from the decision date.
+    Your deadline has passed. The deadline to appeal was the day before the effective date on your enforcement notice.
   </p>
 
   {% from "govuk/components/button/macro.njk" import govukButton %}
