--- a/app/views/appeal/before-you-start/aad/v3/application-not-found/loading.html
+++ b/app/views/appeal/before-you-start/aad/v3/application-not-found/loading.html
@@ -19,7 +19,7 @@
       // Wait 2.5 seconds (2500ms)
       setTimeout(() => {
         // Redirect to check.html
-        window.location.href = "application-not-found";
+        window.location.href = "../../../v19/planning-type";
       }, 1000);
     });
   </script>
