--- a/app/views/appeal/before-you-start/aad/v4/successful/check.html
+++ b/app/views/appeal/before-you-start/aad/v4/successful/check.html
@@ -13,9 +13,9 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <h1 class="govuk-heading-l">Confirm your application details</h1>
+      <h1 class="govuk-heading-l">Check your application details</h1>
 
-      <p class="govuk-body">We’ve combined the details you provided with information held in the local planning authority records.</p>
+      <p class="govuk-body">We’ve combined the details you provided with information held in the Local Planning Authority records.</p>
 
       <p class="govuk-body">Your deadline to appeal is 11:59pm on Sunday 15 March 2026.</p>
 
@@ -58,10 +58,36 @@
           },
           {
             key: {
+              text: "Site address"
+            },
+            value: {
+              text: "123 Street, London, AB1 2CD"
+            },
+            actions: {
+              items: [
+                {
+                  href: "#",
+                  text: "Change",
+                  visuallyHiddenText: "date of birth"
+                }
+              ]
+            }
+          },
+          {
+            key: {
               text: "Type of application"
             },
             value: {
               text: "Householder planning"
+            },
+            actions: {
+              items: [
+                {
+                  href: "#",
+                  text: "Change",
+                  visuallyHiddenText: "type"
+                }
+              ]
             }
           },
           {
@@ -70,6 +96,15 @@
             },
             value: {
               text: "Granted with conditions"
+            },
+            actions: {
+              items: [
+                {
+                  href: "granted-or-refused",
+                  text: "Change",
+                  visuallyHiddenText: "granted or refused"
+                }
+              ]
             }
           },
           {
@@ -78,18 +113,24 @@
             },
             value: {
               text: "26 May 2025"
+            },
+            actions: {
+              items: [
+                {
+                  href: "decision-date",
+                  text: "Change",
+                  visuallyHiddenText: "contact details"
+                }
+              ]
             }
           }
         ]
       }) }}
-     
+
       {{ govukButton({
         text: "Continue to my appeal"
       }) }}
 
-    <p class="govuk-body">If some of these details are incorrect,
-      <a href="../../../v19/planning-type" class="govuk-link">tell us the correct information</a>.
-    </p>
 
     </div>
   </div>
