--- a/app/views/appeal/before-you-start/aad/index.html
+++ b/app/views/appeal/before-you-start/aad/index.html
@@ -17,7 +17,7 @@
       <a href="v4/not-eligible/before-you-start">Successful API call: not eligible</a>
     </li>
     <li>
-      <a href="v4/application-not-found/before-you-start">Failure: application not found</a>
+      <a href="v4/application-not-found/before-you-start">No application found</a>
     </li>
     <li>
       <a href="v4/invalid-ref-error/ref-error">Error: invalid reference number</a>
