--- a/app/views/appeal/before-you-start/aad/v3/application-not-found/loading.html
+++ b/app/views/appeal/before-you-start/aad/v3/application-not-found/loading.html
@@ -16,10 +16,10 @@
   <script>
     // Run when page loads
     window.addEventListener("DOMContentLoaded", () => {
-      // Wait 2.5 seconds (2500ms)
+      // Wait 2.5 seconds (1000ms)
       setTimeout(() => {
         // Redirect to check.html
-        window.location.href = "../../../v19/planning-type";
+        window.location.href = "application-not-found";
       }, 1000);
     });
   </script>
