--- a/app/views/appeal/before-you-start/aad/v4/partial-success/check.html
+++ b/app/views/appeal/before-you-start/aad/v4/partial-success/check.html
@@ -15,7 +15,7 @@
 
       <h1 class="govuk-heading-l">Check your application details</h1>
 
-      <p class="govuk-body">We’ve combined the details you provided with information held in the Local Planning Authority records.</p>
+      <p class="govuk-body">We’ve combined the details you provided with information held in the local planning authority records.</p>
 
       <p class="govuk-body">Your deadline to appeal is 11:59pm on Sunday 15 March 2026.</p>
 
