--- a/app/views/manage/appeals/search/xgovnav/active-search-applied.html
+++ b/app/views/manage/appeals/search/xgovnav/active-search-applied.html
@@ -28,7 +28,7 @@
 
         <form class="govuk-form-group" style="display: flex; gap: 8px; align-items: center; margin-bottom: 0px;">
             <label class="govuk-label govuk-visually-hidden" for="keyword-search">Keyword search</label>
-            <input class="govuk-input" id="keyword-search" name="keyword-search" type="text" autocomplete="off" style="margin-bottom: 0; width:100%;" value="1345301">
+            <input class="govuk-input" id="keyword-search" name="keyword-search" type="text" autocomplete="off" style="margin-bottom: 0; width:100%;" value="2948632">
             <button class="govuk-button" id="keyword-search-button" type="submit" style="margin-bottom: 0;" value="Cambridge">Search</button>
             
         </form>
@@ -81,15 +81,13 @@
                     <tr class="govuk-table__row">
                         <th scope="row" class="govuk-table__header">
                             <a class="govuk-link" href="#">
-                                1345301
+                                2948632
                             </a>
                         </th>
-                        <td class="govuk-table__cell">Spital House, Lensfield Rd, Cambridge CB2 1ER</td>
-                        <td class="govuk-table__cell">Householder</td>
-                        <td class="govuk-table__cell">25 September 2025</td>
-                        <td class="govuk-table__cell"><strong class="govuk-tag govuk-tag--red">
-                            Overdue
-                          </strong></td>
+                        <td class="govuk-table__cell">The Old Watchtower, Cliffside Road, Marlowe Point, Hampshire, CB23 7UA</td>
+                        <td class="govuk-table__cell">Planning</td>
+                        <td class="govuk-table__cell">29 September 2025</td>
+                        <td class="govuk-table__cell">1 day</td>
                           <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
                     </tr>
                     
