--- a/app/views/manage/appeals/search/xgovnav/active.html
+++ b/app/views/manage/appeals/search/xgovnav/active.html
@@ -264,7 +264,7 @@
                         <td class="govuk-table__cell">The Old Watchtower, Cliffside Road, Marlowe Point, Hampshire, CB23 7UA</td>
                         <td class="govuk-table__cell">Planning</td>
                         <td class="govuk-table__cell">29 September 2025</td>
-                        <td class="govuk-table__cell">3 days</td>
+                        <td class="govuk-table__cell">1 day</td>
                           <td class="govuk-table__cell"><a href="#">Questionnaire</a><br><a href="#">Statement</a><br></td>
                     </tr>
                     <tr class="govuk-table__row">
