--- a/app/views/appeal/enforcement/v3/before-you-start/lpa.html
+++ b/app/views/appeal/enforcement/v3/before-you-start/lpa.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/layout-main.html' %}
 {% set prototypeLinks = [{href: 'errors/lpa-not-available', text: 'LPA not available'}] %}
 
-{% set title = 'Which local planning authority (LPA) issued the enforcement notice?' %}
+{% set title = 'Find your local plnning authority' %}
 
 {% block questions %}
   {# Create an array for the LPA select below #}
