--- a/app/views/appeal/enforcement/v3/prepare-appeal/all-or-part.html
+++ b/app/views/appeal/enforcement/v3/prepare-appeal/all-or-part.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Was your application for all or part of the development?' %}
+{% set title = 'Was the application for all or part of the development?' %}
 
 {% block questions %}
 
