--- a/app/views/appeal/enforcement/v3/prepare-appeal/decision-due-date.html
+++ b/app/views/appeal/enforcement/v3/prepare-appeal/decision-due-date.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'What date was your decision due?' %}
+{% set title = 'What date was the decision due?' %}
 
 {% block questions %}
 
