--- a/app/views/appeal/more-than-one-appeal/v5/current-appeals.html
+++ b/app/views/appeal/more-than-one-appeal/v5/current-appeals.html
@@ -138,6 +138,24 @@
           format: 'numeric'
         }
       ],
+        [
+        {
+          html: '<a href="/appeal/appeals/v2/appeal-details?appealCode=1345172&type=lbc&action=&questionnaire=due">1333118</a>'
+        },
+        {
+          html: '34 Berry Farm, Yorkshire YK58 67T'
+        },
+        {
+          html: 'Enforcement appeal'
+        },
+        {
+          html: '24' | daysInFuture
+        },
+        {
+          html: '<a href="../../enforcement/v1-statement/enter-statement">Statement</a>',
+          format: 'numeric'
+        }
+      ],
       [
         {
           html: "<strong class='govuk-tag govuk-tag--yellow'>Draft</strong>"
