--- a/app/views/appeal/enforcement/v3/prepare-appeal/granted-or-refused.html
+++ b/app/views/appeal/enforcement/v3/prepare-appeal/granted-or-refused.html
@@ -1,6 +1,6 @@
 {% extends '_layouts/layout-appellant-main.html' %}
 
-{% set title = 'Was your application granted or refused?' %}
+{% set title = 'Was the application granted or refused?' %}
 
 {% block questions %}
 {{ govukRadios({
