--- a/app/views/appeal/enforcement/index.html
+++ b/app/views/appeal/enforcement/index.html
@@ -43,6 +43,8 @@ href: '/#appeal'
 
     <p class="govuk-body"><a href="enforcement/v3/before-you-start/before-you-start">Before you start</a></p>
 
+    <p class="govuk-body"><a href="enforcement/v1-statement/enter-statement">Appellant statement</a></p>
+
     <h2 class="govuk-heading-m">Previous versions:</h2>
     <ul class="govuk-list govuk-list--bullet">
       <li>
